- added functionality back to highlight cells when game is won (GameManager.gameEnding()) - fixed alignment of game pieces to be properly centered + added border colors for contrast

--- a/client/src/Components/GameBoardComponents/GameBoard.css
+++ b/client/src/Components/GameBoardComponents/GameBoard.css
@@ -1,9 +1,16 @@
 /* Game board has cells which are fixed dimensions and have a border */
 
+/* .GameBoard-board {
+  width: 100%;
+} */
+
 .GameBoard td {
   width: 50px;
   height: 50px;
   border: solid 1px #666;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
 }
 
 .Game-Button {
