--- a/client/src/Components/GameBoardComponents/GamePiece.css
+++ b/client/src/Components/GameBoardComponents/GamePiece.css
@@ -1,6 +1,14 @@
 .GamePiece {
-  margin: 5px;
+
   width: 80%;
   height: 80%;
   border-radius: 50%;
+  border-width: 2px;
+  border-color: rgb(135, 135, 135);
+  border-style: solid;
+  /* display: inline-block; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
